--- a/Pegs/MainWindow.xaml
+++ b/Pegs/MainWindow.xaml
@@ -5,8 +5,13 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Pegs"
         mc:Ignorable="d"
-        Title="MainWindow" Height="350" Width="525">
-    <Grid>
-        
-    </Grid>
+        Title="Pegs" Height="300" Width="300">
+    <DockPanel>
+        <Menu VerticalAlignment="Top" DockPanel.Dock="Top">
+            <MenuItem x:Name="NewGameBtn" Header="New Game" Click="NewGameBtn_Click"/>
+        </Menu>
+        <Viewbox>
+            <Grid x:Name="MainView" MinWidth="300" MinHeight="300"/>
+        </Viewbox>
+    </DockPanel>
 </Window>
